# BugsDocScanner-flutter

./: .gitattributes  .gitignore  README.md  pubspec.yaml  temp_for_macros_2.hpp  testbinding.dart
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/bugthedebugger/bugs_scanner/: BugsScannerPlugin.kt
classes/: bugsscanner.cpp
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/ios/: bugsscanner.cpp  bugsscanner.hpp
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
include/: bugsscanner.hpp
ios/: bugs_scanner.podspec
ios/Classes/: BugsScannerPlugin.h  BugsScannerPlugin.m  SwiftBugsScannerPlugin.swift  bugsscanner.cpp
ios/opencv2.framework/Versions/A/: opencv2
lib/: bugs_scanner.dart
lib/app/: app.dart  app.locator.dart
lib/data/: isolate_param.dart  scanner_contour.dart  scanner_coordinates.dart
lib/ffi/: bugs_scanner_adapter.dart  bugs_scanner_base.dart  bugs_scanner_bindings.dart  bugs_scanner_impl.dart
lib/services/: bugs_pdf_service.dart  bugs_scanner_service.dart
lib/ui/accept/: accept_view.dart  accept_view_model.dart
lib/ui/cropper/: cropper_handle.dart  cropper_view.dart  cropper_view_model.dart
lib/ui/cropper/widgets/: magnifying_glass_widget.dart
lib/ui/scanner/: scanner_view.dart  scanner_view_model.dart
test/: bugs_scanner_test.dart
(+19 files in other folders)
